# qlang

./: .flake8  README.md  bun.lockb  grammar.txt  index.ts  package.json
demo/: demo_01.ts  demo_02.ts  demo_03.ts  demo_04.ts  utils.ts
demo/demo_01/: lexer.ts
demo/demo_02/: ast.ts  ast_parser.ts  lexer.ts  token.ts
demo/demo_03/: ast_parser.ts  grammar.txt
demo/demo_04/: ast.ts  ast_parser.ts  environment.ts  grammar.txt  interpreter.ts  lexer.ts  token.ts
interpreter/: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
interpreter/src/: globals.py  interpreter.py  lexer.py  parser.py  token.py
interpreter/src/enums/: keywords.py  operators.py  token_type.py
interpreter/src/errors/: illegal_char_exception.py  invalid_syntax_exception.py  maximum_argument_exception.py  qlang_exception.py  string_unterminated_exception.py
interpreter/src/nodes/: expression.py  merged.py  node_type.py  statement.py
interpreter/src/runtime/: callable.py  environment.py  std.py  values.py
interpreter/src/tools/: position.py
interpreter/tests/: test_interpreter.py  test_parser.py  test_token.py  tools.py
interpreter/tests/runtime/: test_environment.py
qlang-app/: README.md  bun.lockb  dev-app-update.yml  electron-builder.yml  package.json
qlang-interpreter/: bun.lockb  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: ast.ts  lexer.ts  lexer_simple.spec.ts  parser.spec.ts  parser.ts  token.ts
src/runtime/: environment.spec.ts  interpreter.spec.ts  interpreter.ts  values.ts
(+50 files in other folders)
