[tool.poetry]
name = "interpreter"
version = "0.1.0"
description = ""
authors = ["Quentin Ysambert <quentin.ysambert@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]
repository = "https://github.com/quenti77/qlang"
homepage = "https://github.com/quenti77/qlang"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
flake8-bugbear = "^24.10.31"
flake8-bandit = "^4.1.1"
flake8-annotations = "^3.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
safety = "^3.2.10"
pre-commit = "^4.0.1"
pre-commit-hooks = "^5.0.0"
darglint = "^1.8.1"
xdoctest = "^1.2.0"
isort = "^5.13.2"
coverage = { extras = ["toml"], version = "^7.6.4" }
pyupgrade = "^3.19.0"
conventional-pre-commit = "^3.6.0"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
include_namespace_packages = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
force_single_line = true
lines_after_imports = 2

[tool.mypy]
packages = ["src", "tests"]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
